[package]
name = "neon-beat-back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws", "http1", "tokio", "json"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
thiserror = "2.0"
dashmap = "6.1"
mongodb = { version = "3.3", default-features = false, features = ["rustls-tls", "bson-3", "compat-3-3-0"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-stream = "0.3"
rand = "0.9"
time = { version = "0.3", features = ["formatting"] }

[lints.rust]
missing_docs = "warn"
