[package]
name = "neon-beat-back"
version = "0.5.5"
edition = "2024"

[features]
default = ["mongo-store", "couch-store"]
mongo-store = ["dep:mongodb"]
couch-store = ["dep:reqwest"]
tool-colors-gen = ["dep:palette"]

[dependencies]
axum = { version = "0.8", features = ["macros", "ws", "http1", "tokio", "json"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.15", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
thiserror = "2.0"
dashmap = "6.1"
mongodb = { version = "3.3", optional = true, default-features = false, features = ["rustls-tls", "bson-3", "compat-3-3-0"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
utoipa = { version = "5.4", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-stream = "0.3"
rand = "0.9"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["formatting"] }
indexmap = { version = "2.12.0", features = ["serde"] }
palette = { version = "0.7.6", features = ["serializing"], optional = true }

[lints.rust]
missing_docs = "warn"
